ck small update

--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -167,7 +167,7 @@
                             <img src="https://i.ibb.co/48FYbWW/Fellowship-banner.png" class="center" style="width: 75%; max-width: 600px;"></a><br>
                             Welcome to the <b>Community Knowledge</b> centre!<br><br>
                             <button type="button" class="btn btn-download" data-toggle="modal" data-target=".bd-example-modal-lg">What is this?</button>
-                            <p style="margin-top: 5px;">Visit the form <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" style="font-weight: bold" target="_blank" class="text-link">HERE</a>!</p>
+                            <p style="margin-top: 5px;">Send the links <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" style="font-weight: bold" target="_blank" class="text-link">HERE</a>!</p>
                             <p style="margin-top: -25px; margin-bottom: -10px;"><i>The current content of Community Knowledge is just a sample. Please refer to the information above to learn how you can contribute.</i></p>
                             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
@@ -196,7 +196,7 @@
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: How can I help? ::..<br></h5>
                                     It's simple! All you have to do is visit your forum (no matter what nationality you are - all languages are welcomed!) and send me as many links to your favorite topics 
                                     as you wish - whether it's 3, 5, 10, 20 or more! You can even send the links to the entire sections if you feel like they are worth it!
-                                    <p style="text-align: center;"><h4 style="text-align: center;">Visit the form <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" target="_blank" class="text-link">here</a>!</h4></p>
+                                    <p style="text-align: center;"><h4 style="text-align: center;">Send the links <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" target="_blank" class="text-link">here</a>!</h4></p>
                                     The Phase 1 will be ended on December 12th, 2023. I will then take my time to process all the content you - as a community - have sent me and will scrape the forums to store their content here on my website! You can already
                                     start sharing the topics with me, to make sure you reserve enough time for this process! Once the forums are closed, no more content can be archived! ⏳<br><hr>
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: What are the limitations? ::..<br></h5>
