ck modal remove

--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -166,9 +166,9 @@
                             <a href="community-knowledge.html">
                             <img src="https://i.ibb.co/48FYbWW/Fellowship-banner.png" class="center" style="width: 75%; max-width: 600px;"></a><br>
                             Welcome to the <b>Community Knowledge</b> centre!<br><br>
-                            <button type="button" class="btn btn-download" data-toggle="modal" data-target=".bd-example-modal-lg">What is this?</button>
+                            <!--<button type="button" class="btn btn-download" data-toggle="modal" data-target=".bd-example-modal-lg">What is this?</button>-->
                             <!--<p style="margin-top: 5px;">Send the links <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" style="font-weight: bold" target="_blank" class="text-link">HERE</a>!</p>-->
-                            <p style="margin-bottom: -10px;"><i>The current content of Community Knowledge is just a sample. Please refer to the information above to learn how you can contribute.</i></p>
+                            <!--<p style="margin-bottom: -10px;"><i>The current content of Community Knowledge is just a sample. Please refer to the information above to learn how you can contribute.</i></p>-->
                             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content" style="max-height: 950px; overflow-y: auto; padding: 20px; background: linear-gradient(to bottom, #f3eee3, #e4d3af); box-shadow: 0px -15px 15px 0px rgba(128, 128, 128, 0.4) inset;">
