--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -165,8 +165,8 @@
                         <div id="ck_header" class="col-sm text-center" style="padding-left: 50px; padding-right: 50px;">
                             <a href="community-knowledge.html">
                             <img src="https://i.ibb.co/48FYbWW/Fellowship-banner.png" class="center" style="width: 75%; max-width: 600px;"></a><br>
-                            Welcome to the <b>Community Knowledge</b> centre!<br><br>
-                            <!--<button type="button" class="btn btn-download" data-toggle="modal" data-target=".bd-example-modal-lg">What is this?</button>-->
+                            <!--Welcome to the <b>Community Knowledge</b> centre!<br><br>-->
+                            <button type="button" class="btn btn-download" data-toggle="modal" data-target=".bd-example-modal-lg">A Message from iDavis</button>
                             <!--<p style="margin-top: 5px;">Send the links <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" style="font-weight: bold" target="_blank" class="text-link">HERE</a>!</p>-->
                             <!--<p style="margin-bottom: -10px;"><i>The current content of Community Knowledge is just a sample. Please refer to the information above to learn how you can contribute.</i></p>-->
                             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -177,12 +177,28 @@
                                           <span aria-hidden="true">&times;</span>
                                         </button>
                                       </div>
-                                    <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: Community Knowledge ::..<br></h5>
-                                    <center><img src="https://i.ibb.co/48FYbWW/Fellowship-banner.png" style="width: 80%; max-width: 600px;"></center><br>
+                                    <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">A Message from iDavis<br></h5>
+                                    <p style="margin-top: -10px;"><i>November 9th</i></p>
+                                    <!--<center><img src="https://i.ibb.co/48FYbWW/Fellowship-banner.png" style="width: 80%; max-width: 600px;"></center><br>-->
                                     <hr>
-                                    The Community Knowledge is the latest feature on my website, related to the closure of the Community Forums announced on September 11th, 2023. InnoGames has decided to close the Community Forums later this year 
+                                    Hello everyone, I hope this message finds you well. I want to take a moment to address the recent development of the Community Knowledge and share with you the latest update.<br><br>
+                                    
+                                    As many of you know, the initiative of creating this project was launched to preserve and celebrate the invaluable contributions from our community members over the years.
+                                    A project that I undertook with great enthusiasm and a deep sense of community spirit.<br><br>
+
+                                    Even though it was my sincere intention to contribute positively with this project, it is with a heavy heart that I must announce the discontinuation of the Community Knowledge. 
+                                    This decision is a result of unforeseen challenges that could potentially jeopardize the security of the website and the involved parties, rendering it unfeasible to continue.<br><br>
+
+                                    I want to extend a special thanks to everyone who has already contributed to this project.
+                                    Your immense interest has demonstrated how much you value the content of this website, and it places a significant commitment on me to continue improving this platform in all aspects going forward.<br><br>
+
+                                    I look forward to delivering a lot of new content in the future for all of you.<br><br>
+
+                                    Thank you.<br>
+                                    iDavis
+                                    <!--The Community Knowledge is the latest feature on my website, related to the closure of the Community Forums announced on September 11th, 2023. InnoGames has decided to close the Community Forums later this year 
                                     and shift the focus to the newly created server on Discord. From now on, players can use the official Elvenar server on Discord to discuss the game. <!--Discord is a modern and convenient platform that can be easily accessed 
-                                    from both your mobile device and desktop browser or app.--><br><br>
+                                    from both your mobile device and desktop browser or app.<br><br>
                                     The unfortunate news is that this change will make us lose a wealth of interesting information that has been created over the years - once the Community Forums are closed and no longer accessible. That's why I'm introducing 
                                     to you the Community Knowledge - an archive of all the information from the forums that is either important, interesting or considered nostalgic by you or the community!<hr>
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: Phase 1 - Data Collection ::..<br></h5>
@@ -211,7 +227,7 @@
                                     official forums, and I've chosen to take a more delicate approach by providing a repository of memories for something that we won't be able to replicate in the future.<br><br>
                                     This decision aims to align with InnoGames' vision and ensure that players have a seamless and unified experience on Discord, which has been chosen as the official communication platform going forward.<br><br>
                                     <hr>
-                                    I eagerly anticipate your responses and am thrilled to embark on an exciting new project for my website with all of you!
+                                    I eagerly anticipate your responses and am thrilled to embark on an exciting new project for my website with all of you!-->
                                 </div>
                             </div>
                             </div>
