--- a/admin.html
+++ b/admin.html
@@ -187,7 +187,7 @@ Odmena1<br></h7>
     <p>SeasonPass:</p>
 
 
-    seasonPass: <input class="form-control-file" type="file" id="seasonPass" name="filename">
+    seasonPass (prislusny json pre dany season): <input class="form-control-file" type="file" id="seasonPass" name="filename">
     season ID (season_dreams): <input type="text" id="season_id"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonPass()">GENERATE</button>
 
@@ -197,7 +197,7 @@ Odmena1<br></h7>
     <p>SeasonChests:</p>
 
 
-    weightedRewards: <input class="form-control-file" type="file" id="seasonChests" name="filename">
+    weightedRewards (xml.balancing.rewards.weighted.WeightedRewards): <input class="form-control-file" type="file" id="seasonChests" name="filename">
     season ID (season_dreams): <input type="text" id="season_chests_id"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateSeasonChests()">GENERATE</button>
 
