beacons clickable buildings links

--- a/eventTabs/scroll_sorcerers_xxiv_/beacons.html
+++ b/eventTabs/scroll_sorcerers_xxiv_/beacons.html
@@ -425,10 +425,10 @@
  }
  
  var specialBuildings = {
-     "A_Evt_Scroll_Sorcerers_XXIV_Pristine_Tree":`<h7>Pristine Tree</h7>`,
-     "A_Evt_Scroll_Sorcerers_XXIV_Infinite_Drop":`<h7>Infinite Drop</h7>`,
-     "A_Evt_Scroll_Sorcerers_XXIV_Firefly_Pond":`<h7>Firefly Pond</h7>`,
-     "A_Evt_Scroll_Sorcerers_XXIV_Floral_Ringlet":`<h7>Floral Ringlet</h7>`,
+     "A_Evt_Scroll_Sorcerers_XXIV_Pristine_Tree":`<a href="https://idavis-elvenar.com/buildings.html#A_Evt_Scroll_Sorcerers_XXIV_Pristine_Tree" target="_blank" class="text-link" style="font-weight: bold;"><h7>Pristine Tree</h7></a>`,
+     "A_Evt_Scroll_Sorcerers_XXIV_Infinite_Drop":`<a href="https://idavis-elvenar.com/buildings.html#A_Evt_Scroll_Sorcerers_XXIV_Infinite_Drop" target="_blank" class="text-link" style="font-weight: bold;"><h7>Infinite Drop</h7></a>`,
+     "A_Evt_Scroll_Sorcerers_XXIV_Firefly_Pond":`<a href="https://idavis-elvenar.com/buildings.html#A_Evt_Scroll_Sorcerers_XXIV_Firefly_Pond" target="_blank" class="text-link" style="font-weight: bold;"><h7>Firefly Pond</h7></a>`,
+     "A_Evt_Scroll_Sorcerers_XXIV_Floral_Ringlet":`<a href="https://idavis-elvenar.com/buildings.html#A_Evt_Scroll_Sorcerers_XXIV_Floral_Ringlet" target="_blank" class="text-link" style="font-weight: bold;"><h7>Floral Ringlet</h7></a>`,
  }
  
  // JS CODE
