--- a/admin.html
+++ b/admin.html
@@ -213,6 +213,15 @@ Odmena1<br></h7>
 
 </div>
 
+<div class="container" style="margin-bottom: 20px;">
+    <p>Tomes:</p>
+
+
+    xml.balancing.rewards.reward_selection_kit.RewardSelectionKit: <input class="form-control-file" type="file" id="tomes" name="filename"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateTomes()">GENERATE</button>
+
+</div>
+
 
 </body>
 </html>
