--- a/seasons.html
+++ b/seasons.html
@@ -54,6 +54,7 @@
     <script src="database/seasonPass.js"></script>
     <script src="database/imagesBuildings.js"></script>
     <script src="database/seasonsChests.js"></script>
+    <script src="database/tomes.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <title>Seasons - iDavis Elvenar</title>
