--- a/guestRaces/guestRacesTabs/ch21/wonders.html
+++ b/guestRaces/guestRacesTabs/ch21/wonders.html
@@ -34,23 +34,27 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                    <img src="" style="width: 24px;"> Gives Boosted Ascended Goods when collecting Community Work<br>
+                    <img src="https://i.ibb.co/JmtYv8m/aw1-effect2.png" style="width: 24px;"> Gives Boosted Ascended Goods when collecting Community Work<br>
                     <h7>from 3x the amount of collected Community Work at level 1 to 32.5x at level 35</h7><br>
-                    <img src="" style="width: 24px;"> Produces Seeds every 3 hours depending on Units per Squad<br>
+                    <img src="https://i.ibb.co/7NCYYPv/aw1-effect1.png" style="width: 24px;"> Produces Seeds every 3 hours depending on Units per Squad<br>
                     <h7>from 6% of your Squad Size at level 1 to 65% of your Squad Size at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
-                    <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Tricks<br></h6>
+                    <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
+                <td style="width: 8%; text-align: center; width: 50%;">The effects of this wonder did not convince me to incorporate it into my city. By Chapter 21, I had already established a stable seeds outcome, thanks to numerous sources 
+                  introduced in previous chapters. I advise to review earlier chapters to identify wonders more beneficial for collection of seeds. Regarding Ascended Goods, up until Chapter 21, I found it sufficient to produce them solely in manufactories, 
+                  especially when owning the Elvenar Trade Center, which significantly enhances the effects of Magical Manufacturing spells. Based on this experience, I don't foresee the need for additional sources of Ascended Goods, especially considering 
+                  the high costs associated with fully upgrading this wonder (1,260,000 Spell Fragments, along with a considerable amount of Combining Catalysts and Royal Restoration spells). Additionally, there might be other ways to obtain Community Work 
+                  in future chapters, and it remains uncertain whether they will count towards this wonder.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_3">3/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
@@ -81,25 +85,29 @@
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Effects<br></h6>
                 </td>
                 <td style="width: 8%; text-align: center; width: 50%;">
-                  <img src="" style="width: 24px;"> Produces Vallorian Guards every 3 hours<br>
+                  <img src="https://i.ibb.co/pW18SJk/aw2-effect1.png" style="width: 24px;"> Produces Vallorian Guards every 3 hours<br>
                   <h7>from 22.5% at level 1 to 172.5% at level 35</h7><br>
-                  <img src="" style="width: 24px;"> Cauldron Ingredients Cost Reduction<br>
+                  <img src="https://i.ibb.co/5nY3QQ6/aw2-effect2.png" style="width: 24px;"> Cauldron Ingredients Cost Reduction<br>
                   <h7>from 6% of reduction at level 1 to 65% of reduction at level 35</h7><br>
-                  <img src="" style="width: 24px;">Academy Production Time Reduction<br>
+                  <img src="https://i.ibb.co/3sHjVf3/aw2-effect3.png" style="width: 24px;"> Academy Production Time Reduction<br>
                   <h7>from 6% of reduction at level 1 to 65% of reduction at level 35</h7>
                 </td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
-                    <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Tricks<br></h6>
+                    <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Tips & Evaluation<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
+                <td style="width: 8%; text-align: center; width: 50%;">The better option among the two wonders.
+                  The reductions of this wonder significantly facilitate the process of collecting spells and gathering valuable effects from the Cauldron. At level 35, this wonder allows the production of Combining Catalyst 
+                  in just 2 hours and 13 minutes, for example. However, it's important to note the cons of this wonder, which include its relatively large size and the high costs of upgrading. Similar to Maman Le Pré's Antique Shop, 
+                  it requires 1,260,000 spell fragments for a full upgrade to level 35 (together with a bunch of Combining Catalysts and Royal Restoration spells). In my case, this upgrade depleted all the Spell Fragments I had stored, and I also had to disenchant hundreds of Portal Profits for 
+                  this purpose. Choosing to invest in this wonder should be a carefully considered decision due to the associated costs, but the positive effects make it a worthwhile investment.</td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
                     <h6 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">Rating<br></h6>
                 </td>
-                <td style="width: 8%; text-align: center; width: 50%;">Soon</td>
+                <td style="width: 8%; text-align: center; width: 50%;"><b class="score_color_9">9/10</b></td>
               </tr>
               <tr>
                 <td style="width: 20%; text-align: center; width: 50%;">
