--- a/admin.html
+++ b/admin.html
@@ -29,6 +29,7 @@
     <script src="database/items.js"></script>
     <script src="database/effectConfigs.js"></script>
     <script src="database/weightedRewards.js"></script>
+    <script src="database/languages/quests_tasks.js"></script>
     <!-- Modified Bootstrap CSS -->
     <title>Administrator Page</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
@@ -219,6 +220,15 @@ Odmena1<br></h7>
 
     xml.balancing.rewards.reward_selection_kit.RewardSelectionKit: <input class="form-control-file" type="file" id="tomes" name="filename"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateTomes()">GENERATE</button>
+
+</div>
+
+<div class="container" style="margin-bottom: 20px;">
+    <p>Quests auto generating:</p>
+
+    response (amount=300): <input class="form-control-file" type="file" id="quests_auto" name="filename">
+    event_id: <input type="text" id="quests_event_id" value="theater_easter"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase" onclick="generateQuestsAuto()">GENERATE</button>
 
 </div>
 
