event quests automation small update

--- a/admin.html
+++ b/admin.html
@@ -226,7 +226,7 @@ Odmena1<br></h7>
 <div class="container" style="margin-bottom: 20px;">
     <p>Quests auto generating:</p>
 
-    response (amount=300): <input class="form-control-file" type="file" id="quests_auto" name="filename">
+    response (amount=300, search=event_id): <input class="form-control-file" type="file" id="quests_auto" name="filename">
     event_id: <input type="text" id="quests_event_id" value="theater_easter"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase" onclick="generateQuestsAuto()">GENERATE</button>
 
