--- a/admin.html
+++ b/admin.html
@@ -227,7 +227,7 @@ Odmena1<br></h7>
     <p>Quests auto generating:</p>
 
     response (amount=300, search=event_id): <input class="form-control-file" type="file" id="quests_auto" name="filename">
-    event_id: <input type="text" id="quests_event_id" value="theater_easter"><br>
+    event_id: <input type="text" id="quests_event_id" value="shuffle_garden"><br>
     <button class="btn btn-lg btn-warning btn-block text-uppercase" onclick="generateQuestsAuto()">GENERATE</button>
 
 </div>
