various bugfixes for chapter dependent event quests

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Buzzing Spring event arrived!</strong> All buildings from this event are now in the database (March 26th 2024)</li>
                 <li><strong>Blessing of the Phoenix event arrived!</strong> All buildings from this event are now in the database (February 13th 2024)</li>
                 <li><strong>Tomes are now available on the website!</strong> You can now find a detailed overview of all Tomes on the brand-new subpage (January 3rd 2024)</li>
                 <li><strong>Tournament of Magic event arrived!</strong> All buildings from this event are now in the database (December 15th 2023)</li>
