tile_amuni_xxiv release

--- a/eventTabs/tile_amuni_xxiv_/strategies.html
+++ b/eventTabs/tile_amuni_xxiv_/strategies.html
@@ -7,7 +7,7 @@
 
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
        
-       The Great Excavation is my favorite event type as it is the only mechanic that allows players to fully pull out their
+       The Whiskers of the Past is my favorite event type as it is the only mechanic that allows players to fully pull out their
        strategic skills. Unlike rotating chests or shuffle board events, the tile event gives you much better control over
        the rewards and progress you receive (which in my opinion makes the event much more interesting after all).<br><br>
 
@@ -48,7 +48,7 @@
             is no reward hidden the semi-visible tile, there is no reason to clear it. Using your tools strategically will lead to maximizing
             your information about the surrounding tiles and minimizing the number of fully dusted tiles you should leave behind!
         </li>
-        <li><b>The Golden Eye!</b> This is the newest addition of the Great Excavation event! For each revealed tile which does not contain a reward
+        <li><b>The Golden Eye!</b> This is the newest addition of The Whiskers of the Past event! For each revealed tile which does not contain a reward
             your receive Power. Power is the resource to charge the Golden Eye and once it's fully charged, you can use its divine effect
             to reveal locations of all rewards within the currently visible area (but be careful, once it's fully charged, any additional Power collected
             will be lost). In other words, if you do not manage to get the most out of 
