--- a/eventTabs/tile_amuni_xxiv_/tools.html
+++ b/eventTabs/tile_amuni_xxiv_/tools.html
@@ -37,14 +37,14 @@
        out of your Provinsions. You can check the
        <b>Strategies</b> tab to read about well proven strategies of the Buried City.</center><br>
 
-       <center><img src="https://i.ibb.co/XF1jHcY/february-xxiii-window.png" style="width: 60%;"></center><br>
+       <center><img src="https://i.ibb.co/5MQ1DWS/event-window.png" style="width: 60%;"></center><br>
 
        In the left side of the event window you can see all your currently available tools. To buy more, you need to visit the
        Digging Tool Shop (using the <b>+</b> button under the Vacuum Vial icon).<br><br>
 
        <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
            <div class="col-sm-5">
-             <center><img src="https://i.ibb.co/PgvPyVR/toolshop-updated.png" style="max-width: 100%;"></center><br>
+             <center><img src="https://i.ibb.co/0Dpnb7h/tools-packages.png" style="max-width: 100%;"></center><br>
            </div>
            <div class="col-sm-7">
                I recommend you to always purchase the packs of bundled tools (by turns). You will receive the biggest number of tools
@@ -53,7 +53,7 @@
            </div>
        </div>
 
-       If you want to see how I'm using my tools to handle different situations in the city, you can watch my video in which I show you the timelapse of the Buried City
+       If you want to see how I'm using my tools to handle different situations in the city, you can watch my video in which I show you the timelapse of the Whiskers of the Past
        gameplay:<br><br>
 
        <center>
