--- a/eventTabs/tile_amuni_xxiv_/tools.html
+++ b/eventTabs/tile_amuni_xxiv_/tools.html
@@ -7,7 +7,7 @@
 
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
        
-       The Great Excavation event introduces a game mechanic that is completely unique in Elvenar! The Buried City has appeared
+       The Whiskers of the Past event introduces a game mechanic that is completely unique in Elvenar! The Buried City has appeared
        right next to your city and now it's up to you to clear the dust, find your path and collect all the hidden treasures
        and artifacts that the Amuni event has to offer!<br>
 
