scroll_aquatic_xxiv release

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>Marine Marvels event arrived!</strong> All buildings from this event are now in the database (June 7th 2024)</li>
                 <li><strong>Whiskers of the Past event arrived!</strong> All buildings from this event are now in the database (May 13th 2024)</li>
                 <li><strong>Buzzing Spring event arrived!</strong> All buildings from this event are now in the database (March 26th 2024)</li>
                 <li><strong>Blessing of the Phoenix event arrived!</strong> All buildings from this event are now in the database (February 13th 2024)</li>
