prizes tab prep

--- a/admin.html
+++ b/admin.html
@@ -232,6 +232,14 @@ Odmena1<br></h7>
 
 </div>
 
+<div class="container" style="margin-bottom: 20px;">
+    <p>Events prizes:</p>
+
+    seasonal_event file: <input class="form-control-file" type="file" id="seasonal_event" name="filename"><br>
+    <button class="btn btn-lg btn-warning btn-block text-uppercase" onclick="generateEventPrizes()">GENERATE</button>
+
+</div>
+
 
 </body>
 </html>
