--- a/events.html
+++ b/events.html
@@ -57,6 +57,7 @@
     <script src="database/globalStartDates.js"></script>
     <script src="javascript/globalRightBar.js"></script>
     <script src="database/eventsSelectors.js"></script>
+    <script src="database/eventsPrizes.js"></script>
 
     <script async src="https://fundingchoicesmessages.google.com/i/pub-4154227292627045?ers=1" nonce="Pu_kPceCoK0HbXDvnwMfzg"></script><script nonce="Pu_kPceCoK0HbXDvnwMfzg">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 
