prizes tab release + scroll_aquatic_xxiv quests

--- a/eventTabs/scroll_aquatic_xxiv_/hoops.html
+++ b/eventTabs/scroll_aquatic_xxiv_/hoops.html
@@ -23,14 +23,14 @@
 
 <script>
 var currencies = {
-    "scroll_aquatic_xxiii_": {
+    "scroll_aquatic_xxiv_": {
         "ec": "https://i.ibb.co/W0SsWfj/EL-akcia-j-l-2021-currency1.png",
         "ep": "https://i.ibb.co/DbMvM6K/EL-akcia-j-l-2021-payback.png"
     }
 }
 
 var chests = {
-    "scroll_aquatic_xxiii_": [
+    "scroll_aquatic_xxiv_": [
     {
             "img": "https://i.ibb.co/2yZV9Wj/EL-stranka-scroll-aquatic-chest2.png",  //HOTOVO
             "ec": 23,
@@ -76,7 +76,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png", //HOTOVO
-            "ec": 20,
+            "ec": 21,
             "ep": 1,
             "chances": [
             {
@@ -119,7 +119,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/WgLLt35/EL-stranka-scroll-aquatic-chest4.png",  //HOTOVO
-            "ec": 30,
+            "ec": 31,
             "ep": 1,
             "chances": [
             {
@@ -162,7 +162,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/Wg5MjRV/EL-stranka-scroll-aquatic-chest3.png",  //HOTOVO
-            "ec": 28,
+            "ec": 29,
             "ep": 1,
             "chances": [
             {
@@ -198,7 +198,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",  //HOTOVO
-            "ec": 45,
+            "ec": 46,
             "ep": 2,
             "chances": [
             {
@@ -241,7 +241,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/ctJJCXd/EL-stranka-scroll-aquatic-chest7.png",  //HOTOVO
-            "ec": 60,
+            "ec": 61,
             "ep": 2,
             "chances": [
             {
@@ -284,7 +284,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/Phn0k6y/EL-stranka-scroll-aquatic-chest6.png",  //HOTOVO
-            "ec": 58,
+            "ec": 59,
             "ep": 2,
             "chances": [
             {
@@ -327,7 +327,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/KmqZxpL/EL-stranka-scroll-aquatic-chest8.png",  //HOTOVO
-            "ec": 73,
+            "ec": 75,
             "ep": 3,
             "chances": [
             {
@@ -370,7 +370,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/Wn8Q2DC/EL-stranka-scroll-aquatic-chest9.png",  //HOTOVO
-            "ec": 77,
+            "ec": 78,
             "ep": 3,
             "chances": [
             {
