it language release

--- a/about-me.html
+++ b/about-me.html
@@ -110,6 +110,7 @@
                             <a class="dropdown-item" href="#" onclick="setLanguage('de')"><img src="images/general/lang_de.png" style="margin-right: 3px; margin-left: 3px;">DE</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('fr')"><img src="images/general/lang_fr.png" style="margin-right: 3px; margin-left: 3px;">FR</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('hu')"><img src="images/general/lang_hu.png" style="margin-right: 3px; margin-left: 3px;">HU</a>
+                            <a class="dropdown-item" href="#" onclick="setLanguage('it')"><img src="images/general/lang_it.png" style="margin-right: 3px; margin-left: 3px;">IT</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('pl')"><img src="images/general/lang_pl.png" style="margin-right: 3px; margin-left: 3px;">PL</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('ru')"><img src="images/general/lang_ru.png" style="margin-right: 3px; margin-left: 3px;">RU</a>
                         </div>
